open graph test

--- a/index.html
+++ b/index.html
@@ -1,37 +1,34 @@
 <html lang="en" prefix="og: https://ogp.me/ns#">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="assets/css/style.css" />
-		<title>
-			A little Clock | A little clock made ith plain CSS and vanila JS
-		</title>
-		<meta
-			name="description"
-			content="A clock made with Vanilla JS and plain CSS"
-		/>
-		<meta
-			property="og:url"
-			content="https://dev634.github.io/clock/index.html"
-		/>
-		<meta
-			property="og:title"
-			content="A clock made with Vanilla JS and plain CSS"
-		/>
-		<meta
-			property="og:description"
-			content="A clock made with Vanilla JS and plain CSS for a 30 days challenge"
-		/>
-		<meta property="og:type" content="article" />
-		<meta
-			property="og:image"
-			content="https://dev634.github.io/clock/assets/img/clock.png
-			"
-		/>
-		<meta property="og:image:type" content="image/png" />
-		<meta property="og:image:width" content="1200" />
-		<meta property="og:image:height" content="600" />
-		<meta property="og:image:alt" content="A clock image" />
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="assets/css/style.css" />
+	<title>
+		My clock | A Clock made for the 30 javascript challeng day
+	</title>
+	<meta name="description" content="A little Clock for the javascript 30 days challenge ..." />
+	<meta
+		property="og:url"
+		content="https://dev634.github.io/flex-panel/index.html"
+	/>
+	<meta property="og:title" content="My Clock" />
+	<meta property="og:description" content="A little Clock made for the javascript 30 days challenge" />
+	<meta property="og:type" content="article" />
+	<meta
+		property="og:image"
+		content="https://dev634.github.io/clock/assets/img/clock.png
+		"
+	/>
+	<meta content="My Clock" property="og:site_name" />
+	<meta property="og:image:type" content="image/png" />
+	<meta property="og:image:width" content="1280" />
+	<meta property="og:image:height" content="640" />
+	<meta property="og:image:alt" content="A little drum flex panel" />
+	<meta property="twitter:card" content="summary_large_image" />
+	<meta
+		property="twitter:title"
+		content="My Clock - Javascript 30 days challenge"
+	/>
 	</head>
 	<body>
 		<div class="layer"></div>
