--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="A little Clock for the javascript 30 days challenge ..." />
 	<meta
 		property="og:url"
-		content="https://dev634.github.io/flex-panel/index.html"
+		content="https://dev634.github.io/clock/index.html"
 	/>
 	<meta property="og:title" content="My Clock" />
 	<meta property="og:description" content="A little Clock made for the javascript 30 days challenge" />
@@ -23,7 +23,7 @@
 	<meta property="og:image:type" content="image/png" />
 	<meta property="og:image:width" content="1280" />
 	<meta property="og:image:height" content="640" />
-	<meta property="og:image:alt" content="A little drum flex panel" />
+	<meta property="og:image:alt" content="A clock" />
 	<meta property="twitter:card" content="summary_large_image" />
 	<meta
 		property="twitter:title"
